# rust-playground

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
exercises/01_basics/: Cargo.toml  README.md
exercises/01_basics/src/: lib.rs
exercises/01_basics/tests/: basics_tests.rs
exercises/02_ownership/: Cargo.toml  README.md
exercises/02_ownership/src/: lib.rs
exercises/02_ownership/tests/: ownership_tests.rs
exercises/03_borrowing/: Cargo.toml  README.md
exercises/03_borrowing/src/: lib.rs
exercises/03_borrowing/tests/: borrowing_tests.rs
exercises/04_option_result/: Cargo.toml  README.md
exercises/04_option_result/src/: lib.rs
exercises/04_option_result/tests/: option_result_tests.rs
exercises/05_structs_enums/: Cargo.toml  README.md
exercises/05_structs_enums/src/: lib.rs
exercises/05_structs_enums/tests/: structs_enums_tests.rs
notes/: borrowing.md  error_handling.md  lifetimes.md  ownership.md  traits.md
projects/cli_calculator/: Cargo.toml  README.md
projects/cli_calculator/src/: lib.rs  main.rs
projects/cli_calculator/tests/: calculator_tests.rs
projects/file_word_count/: Cargo.toml  README.md
projects/json_config_loader/: Cargo.toml  README.md
projects/mini_grep/: Cargo.toml  README.md
projects/todo_cli/: Cargo.toml  README.md
solutions/01_basics/: Cargo.toml
solutions/02_ownership/: Cargo.toml
solutions/03_borrowing/: Cargo.toml
solutions/04_option_result/: Cargo.toml
solutions/05_structs_enums/: Cargo.toml
(+17 files in other folders)
